stuck in render issues

--- a/src/App.css
+++ b/src/App.css
@@ -449,6 +449,9 @@ header{
   margin-top: 1em;
   margin-bottom:1em;
 }
+.gigtime{
+  text-align: center;
+}
 .song-titlebar{
   text-align: center;
 }
